# rustypotato

./: .gitignore  BENCHMARKING.md  BENCHMARK_FIX_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTEGRATION_REPORT.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_COMPLETION_SUMMARY.md  README.md  TEST_STATUS_REPORT.md  docker-compose.yml  features.md  rustypotato.example.toml  test_config.rs
.github/workflows/: ci.yml  release.yml
benches/: performance_benchmarks.rs
docker/: prometheus.yml  rustypotato.toml
docs/: BENCHMARKING.md  CLIENTS.md  COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: command_execution.rs  protocol_decode.rs  resp_roundtrip.rs
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  service.yaml
scripts/: docker-build.sh  install.sh
src/: config.rs  error.rs  lib.rs  logging.rs  monitoring.rs  test_utils.rs
src/cli/: client.rs  commands.rs  interactive.rs  mod.rs
src/commands/: atomic.rs  auth.rs  hash.rs  integration_tests.rs  list.rs  mod.rs  pubsub.rs  registry.rs  server.rs  set.rs  string.rs  ttl.rs
src/metrics/: collector.rs  mod.rs  server.rs
src/monitoring/: health.rs  log_rotation.rs
src/network/: connection.rs  mod.rs  protocol.rs  server.rs
src/pubsub/: manager.rs  mod.rs  notifications.rs  pattern.rs
src/storage/: expiration.rs  memory.rs  mod.rs  persistence.rs
tests/: cli_integration.rs  comprehensive_test_runner.rs.disabled  config_integration.rs  error_handling_integration.rs  failure_injection_tests.rs  final_integration_test.rs  hash_integration.rs  integration_end_to_end.rs  list_integration.rs  logging_behavior.rs  metrics_verification.rs  monitoring_integration.rs  property_tests.rs  server_lifecycle_integration.rs  set_integration.rs  simple_server_test.rs  tcp_server_integration.rs  test_config.rs
tests/concurrency/: concurrent_operations_tests.rs  mod.rs
tests/failure_injection/: dos_hardening.rs  mod.rs  network_failures.rs  persistence_failures.rs  resource_exhaustion.rs
tests/integration/: mod.rs  multi_client_tests.rs
tests/performance/: mod.rs  regression_tests.rs
tests/persistence/: aof_resp_roundtrip.rs  mod.rs  server_restart_tests.rs
tests/property/: command_properties.proptest-regressions  command_properties.rs  mod.rs  protocol_properties.rs  storage_properties.proptest-regressions  storage_properties.rs
tests/unit/: command_tests.rs  config_tests.rs  error_tests.rs  metrics_tests.rs.disabled  mod.rs  network_tests.rs  storage_tests.rs
tools/: network_bench.rs  quick_bench.rs  storage_microbench.rs
